+++ Application class , to provide static appcontext

--- a/app/src/main/res/layout/currency_convert_fragment.xml
+++ b/app/src/main/res/layout/currency_convert_fragment.xml
@@ -1,177 +1,194 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout
+        xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context=".activities.HomeActivity">
+        xmlns:tools="http://schemas.android.com/tools">
 
+    <data>
+        <import type="android.view.View"/>
 
-    <TextView
-            android:id="@+id/textView"
-            style="@style/TitleTextStyle"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="64dp"
-            android:layout_marginEnd="8dp"
-            android:fontFamily="@font/montserrat_alternates"
-            android:text="@string/str_currency"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+        <variable
+                name="viewModel"
+                type="io.audioshinigami.currencyconverter.convertAmount.CurrencyConvertViewModel" />
+    </data>
 
-    <TextView
-            android:id="@+id/textView2"
-            style="@style/TitleTextStyle"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:text="@string/str_calculator"
-            app:layout_constraintStart_toStartOf="@+id/textView"
-            app:layout_constraintTop_toBottomOf="@+id/textView" />
-
-    <TextView
-            android:id="@+id/textView4"
-            style="@style/TitleTextStyle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="0dp"
-            android:paddingStart="0dp"
-            android:paddingEnd="0dp"
-            android:text="@string/str_period"
-            android:textAlignment="textStart"
-            android:textColor="@color/project_green"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toEndOf="@+id/textView2"
-            app:layout_constraintTop_toBottomOf="@+id/textView" />
-
-    <LinearLayout
-            android:id="@+id/id_layout_from"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="32dp"
-            android:layout_marginTop="64dp"
-            android:layout_marginEnd="32dp"
-            android:background="@color/md_grey_100"
-            android:orientation="horizontal"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/textView2">
-
-        <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/edittxt_currency_from"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="4"
-                android:layout_marginStart="@dimen/editxt_padding"
-                android:background="@null"
-                android:fontFamily="@font/montserrat_alternates"
-                android:hint="25"
-                android:inputType="numberDecimal"
-                android:padding="@dimen/editxt_padding"
-                android:textSize="@dimen/dimen_edittxt_size">
-
-        </com.google.android.material.textfield.TextInputEditText>
-
-        <TextView
-                style="@style/currencyInputStyle"
-                android:id="@+id/txtvw_currency_from"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1" />
-
-    </LinearLayout>
-
-    <LinearLayout
-            android:id="@+id/id_layout_to"
+    <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="32dp"
-            android:layout_marginTop="16dp"
-            android:layout_marginEnd="32dp"
-            android:background="@color/md_grey_100"
-            android:orientation="horizontal"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/id_layout_from">
+            android:layout_height="match_parent"
+            tools:context=".activities.HomeActivity">
 
-        <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/edittxt_currency_to"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/editxt_padding"
-                android:padding="@dimen/editxt_padding"
-                android:layout_weight="4"
-                android:background="@null"
-                android:enabled="false"
-                android:fontFamily="@font/montserrat_alternates"
-                android:hint="0.0"
-                android:inputType="text"
-                android:textSize="@dimen/dimen_edittxt_size">
-
-        </com.google.android.material.textfield.TextInputEditText>
 
         <TextView
-                style="@style/currencyInputStyle"
-                android:id="@+id/txtvw_currency_to"
+                android:id="@+id/textView"
+                style="@style/TitleTextStyle"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="1" />
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="64dp"
+                android:layout_marginEnd="8dp"
+                android:fontFamily="@font/montserrat_alternates"
+                android:text="@string/str_currency"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
-    </LinearLayout>
-
-    <LinearLayout
-            android:id="@+id/id_layout_spinners"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="32dp"
-            android:layout_marginTop="32dp"
-            android:layout_marginEnd="32dp"
-            android:orientation="horizontal"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/id_layout_to">
-
-        <androidx.appcompat.widget.AppCompatSpinner
-                android:id="@+id/id_spinner_from"
+        <TextView
+                android:id="@+id/textView2"
+                style="@style/TitleTextStyle"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="3"
-                android:background="@drawable/spinner_border" />
+                android:text="@string/str_calculator"
+                app:layout_constraintStart_toStartOf="@+id/textView"
+                app:layout_constraintTop_toBottomOf="@+id/textView" />
 
-        <ImageView
-                android:id="@+id/imageView"
+        <TextView
+                android:id="@+id/textView4"
+                style="@style/TitleTextStyle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="0dp"
+                android:paddingStart="0dp"
+                android:paddingEnd="0dp"
+                android:text="@string/str_period"
+                android:textAlignment="textStart"
+                android:textColor="@color/project_green"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toEndOf="@+id/textView2"
+                app:layout_constraintTop_toBottomOf="@+id/textView" />
+
+        <LinearLayout
+                android:id="@+id/id_layout_from"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal|center_vertical"
-                android:layout_weight="1"
-                android:scaleType="center"
-                android:src="@drawable/ic_swap" />
+                android:layout_marginStart="32dp"
+                android:layout_marginTop="64dp"
+                android:layout_marginEnd="32dp"
+                android:background="@color/md_grey_100"
+                android:orientation="horizontal"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/textView2">
 
-        <androidx.appcompat.widget.AppCompatSpinner
-                android:id="@+id/id_spinner_to"
+            <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/edittxt_currency_from"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="4"
+                    android:layout_marginStart="@dimen/editxt_padding"
+                    android:background="@null"
+                    android:fontFamily="@font/montserrat_alternates"
+                    android:text="@={viewModel.inputAmount}"
+                    android:hint="25"
+                    android:inputType="numberDecimal"
+                    android:padding="@dimen/editxt_padding"
+                    android:textSize="@dimen/dimen_edittxt_size">
+
+            </com.google.android.material.textfield.TextInputEditText>
+
+            <TextView
+                    style="@style/currencyInputStyle"
+                    android:id="@+id/txtvw_currency_from"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1" />
+
+        </LinearLayout>
+
+        <LinearLayout
+                android:id="@+id/id_layout_to"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="32dp"
+                android:layout_marginTop="16dp"
+                android:layout_marginEnd="32dp"
+                android:background="@color/md_grey_100"
+                android:orientation="horizontal"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/id_layout_from">
+
+            <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/edittxt_currency_to"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/editxt_padding"
+                    android:padding="@dimen/editxt_padding"
+                    android:layout_weight="4"
+                    android:background="@null"
+                    android:enabled="false"
+                    android:fontFamily="@font/montserrat_alternates"
+                    android:text="@={viewModel.convertedAmount}"
+                    android:hint="0.0"
+                    android:inputType="text"
+                    android:textSize="@dimen/dimen_edittxt_size">
+
+            </com.google.android.material.textfield.TextInputEditText>
+
+            <TextView
+                    style="@style/currencyInputStyle"
+                    android:id="@+id/txtvw_currency_to"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1" />
+
+        </LinearLayout>
+
+        <LinearLayout
+                android:id="@+id/id_layout_spinners"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="3"
-                android:background="@drawable/spinner_border" />
+                android:layout_marginStart="32dp"
+                android:layout_marginTop="32dp"
+                android:layout_marginEnd="32dp"
+                android:orientation="horizontal"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/id_layout_to">
 
-    </LinearLayout>
+            <androidx.appcompat.widget.AppCompatSpinner
+                    android:id="@+id/id_spinner_from"
+                    android:dropDownSelector="@drawable/ethiopia"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="3"
+                    android:background="@drawable/spinner_border" />
 
-    <Button
-            android:id="@+id/id_btn_convert"
-            style="@style/Widget.AppCompat.Button.Colored"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="32dp"
-            android:paddingTop="@dimen/dimen_btnconvert_padd"
-            android:paddingBottom="@dimen/dimen_btnconvert_padd"
-            android:text="@string/str_btn_convert"
-            android:textAllCaps="false"
-            android:textSize="22sp"
-            app:layout_constraintEnd_toEndOf="@+id/id_layout_spinners"
-            app:layout_constraintStart_toStartOf="@+id/id_layout_spinners"
-            app:layout_constraintTop_toBottomOf="@+id/id_layout_spinners" />
+            <ImageView
+                    android:id="@+id/imageView"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal|center_vertical"
+                    android:layout_weight="1"
+                    android:scaleType="center"
+                    android:src="@drawable/ic_swap" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+            <androidx.appcompat.widget.AppCompatSpinner
+                    android:id="@+id/id_spinner_to"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="3"
+                    android:background="@drawable/spinner_border" />
+
+        </LinearLayout>
+
+        <Button
+                android:id="@+id/id_btn_convert"
+                style="@style/Widget.AppCompat.Button.Colored"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="32dp"
+                android:paddingTop="@dimen/dimen_btnconvert_padd"
+                android:paddingBottom="@dimen/dimen_btnconvert_padd"
+                android:text="@string/str_btn_convert"
+                android:textAllCaps="false"
+                android:textSize="22sp"
+                android:onClick="@={}"
+                app:layout_constraintEnd_toEndOf="@+id/id_layout_spinners"
+                app:layout_constraintStart_toStartOf="@+id/id_layout_spinners"
+                app:layout_constraintTop_toBottomOf="@+id/id_layout_spinners" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+</layout>
