--- a/app/src/main/res/layout/currency_convert_fragment.xml
+++ b/app/src/main/res/layout/currency_convert_fragment.xml
@@ -184,7 +184,7 @@
                 android:text="@string/str_btn_convert"
                 android:textAllCaps="false"
                 android:textSize="22sp"
-                android:onClick="@={}"
+                android:onClick="@{() -> viewModel.start()}"
                 app:layout_constraintEnd_toEndOf="@+id/id_layout_spinners"
                 app:layout_constraintStart_toStartOf="@+id/id_layout_spinners"
                 app:layout_constraintTop_toBottomOf="@+id/id_layout_spinners" />
