--- a/app/src/main/res/layout/currency_convert_fragment.xml
+++ b/app/src/main/res/layout/currency_convert_fragment.xml
@@ -8,7 +8,7 @@
         <import type="android.view.View"/>
 
         <variable
-                name="viewModel"
+                name="vm"
                 type="io.audioshinigami.currencyconverter.convertAmount.CurrencyConvertViewModel" />
     </data>
 
@@ -79,7 +79,7 @@
                     android:layout_marginStart="@dimen/editxt_padding"
                     android:background="@null"
                     android:fontFamily="@font/montserrat_alternates"
-                    android:text="@={viewModel.inputAmount}"
+                    android:text="@={vm.inputAmount}"
                     android:hint="25"
                     android:inputType="numberDecimal"
                     android:padding="@dimen/editxt_padding"
@@ -89,6 +89,7 @@
 
             <TextView
                     style="@style/currencyInputStyle"
+                    android:text="@={vm.fromCode}"
                     android:id="@+id/txtvw_currency_from"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
@@ -119,7 +120,7 @@
                     android:background="@null"
                     android:enabled="false"
                     android:fontFamily="@font/montserrat_alternates"
-                    android:text="@={viewModel.convertedAmount}"
+                    android:text="@={vm.convertedAmount}"
                     android:hint="0.0"
                     android:inputType="text"
                     android:textSize="@dimen/dimen_edittxt_size">
@@ -129,6 +130,7 @@
             <TextView
                     style="@style/currencyInputStyle"
                     android:id="@+id/txtvw_currency_to"
+                    android:text="@={vm.toCode}"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1" />
@@ -184,7 +186,7 @@
                 android:text="@string/str_btn_convert"
                 android:textAllCaps="false"
                 android:textSize="22sp"
-                android:onClick="@{() -> viewModel.start()}"
+                android:onClick="@{ () -> vm.start()}"
                 app:layout_constraintEnd_toEndOf="@+id/id_layout_spinners"
                 app:layout_constraintStart_toStartOf="@+id/id_layout_spinners"
                 app:layout_constraintTop_toBottomOf="@+id/id_layout_spinners" />
