+++ add DARK THEME ( sort of ) :(

--- a/app/src/main/res/layout/currency_convert_fragment.xml
+++ b/app/src/main/res/layout/currency_convert_fragment.xml
@@ -65,7 +65,7 @@
                 android:layout_marginStart="32dp"
                 android:layout_marginTop="64dp"
                 android:layout_marginEnd="32dp"
-                android:background="@color/md_grey_100"
+                android:background="@color/background_color"
                 android:orientation="horizontal"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -77,10 +77,10 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="4"
                     android:layout_marginStart="@dimen/editxt_padding"
-                    android:background="@null"
                     android:fontFamily="@font/montserrat_alternates"
                     android:text="@={vm.inputAmount}"
-                    android:hint="25"
+                    android:background="@color/background_color"
+                    android:hint="@string/_0_0"
                     android:inputType="numberDecimal"
                     android:padding="@dimen/editxt_padding"
                     android:textSize="@dimen/dimen_edittxt_size">
@@ -104,7 +104,7 @@
                 android:layout_marginStart="32dp"
                 android:layout_marginTop="16dp"
                 android:layout_marginEnd="32dp"
-                android:background="@color/md_grey_100"
+                android:background="@color/background_color"
                 android:orientation="horizontal"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -121,7 +121,7 @@
                     android:enabled="false"
                     android:fontFamily="@font/montserrat_alternates"
                     android:text="@={vm.convertedAmount}"
-                    android:hint="0.0"
+                    android:hint="@string/_0_0"
                     android:inputType="text"
                     android:textSize="@dimen/dimen_edittxt_size">
 
