--- a/app/src/main/res/layout/currency_item_rview.xml
+++ b/app/src/main/res/layout/currency_item_rview.xml
@@ -14,7 +14,7 @@
             android:layout_width="@dimen/dimen_flag_icon"
             android:layout_height="@dimen/dimen_flag_icon"
             app:srcCompat="@mipmap/ic_launcher"
-            android:id="@+id/id_spinner_image"
+            android:id="@+id/currency_flag"
             android:layout_margin="4dp"
             />
 
@@ -24,6 +24,6 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:id="@+id/id_spinner_text"
+            android:id="@+id/currency_code"
             android:layout_weight="1"/>
 </LinearLayout>
