--- a/app/src/main/res/navigation/navigation_graph.xml
+++ b/app/src/main/res/navigation/navigation_graph.xml
@@ -2,11 +2,21 @@
 <navigation
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
         android:id="@+id/navgation_graph"
         app:startDestination="@id/currencyConvertFragment">
 
     <fragment
             android:id="@+id/currencyConvertFragment"
             android:name="io.audioshinigami.currencyconverter.convertAmount.CurrencyConvertFragment"
-            android:label="      " />
+            android:label="      " >
+        <action
+                android:id="@+id/action_currencyConvertFragment_to_currencySelectFragment"
+                app:destination="@id/currencySelectFragment" />
+    </fragment>
+    <fragment
+            android:id="@+id/currencySelectFragment"
+            android:name="io.audioshinigami.currencyconverter.selectcurrency.CurrencySelectFragment"
+            android:label="currency_select_fragment"
+            tools:layout="@layout/currency_select_fragment" />
 </navigation>
