--- a/app/src/main/res/layout/currency_item_rview.xml
+++ b/app/src/main/res/layout/currency_item_rview.xml
@@ -2,6 +2,7 @@
 <LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:background="@color/project_blue"
         android:orientation="horizontal"
         android:layout_marginTop="8dp"
         android:layout_width="match_parent"
@@ -19,6 +20,7 @@
             />
 
     <TextView
+            android:background="@color/project_blue"
             android:padding="4dp"
             android:textSize="@dimen/dimen_spinner_txt_size"
             android:layout_width="0dp"
