--- a/app/src/main/res/layout/currency_select_fragment.xml
+++ b/app/src/main/res/layout/currency_select_fragment.xml
@@ -3,15 +3,16 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
 
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
         tools:context=".selectcurrency.CurrencySelectFragment">
 
-<androidx.recyclerview.widget.RecyclerView
-        android:background="@color/project_blue"
-        android:scrollbars="vertical"
-        android:id="@+id/currencyItem_recyclerview"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/currencyItem_recyclerview"
+            android:layout_width="match_parent"
+            android:layout_height="400dp"
+            android:background="@color/project_blue"
+            android:scrollbars="vertical" />
 
 </LinearLayout>
