--- a/app/src/main/res/navigation/navigation_graph.xml
+++ b/app/src/main/res/navigation/navigation_graph.xml
@@ -14,7 +14,7 @@
                 android:id="@+id/action_currencyConvertFragment_to_currencySelectFragment"
                 app:destination="@id/currencySelectFragment" />
     </fragment>
-    <fragment
+    <dialog
             android:id="@+id/currencySelectFragment"
             android:name="io.audioshinigami.currencyconverter.selectcurrency.CurrencySelectFragment"
             android:label="currency_select_fragment"
