+++ Removed unnecessary TODOs + unUsed methods in SharedViewModel

--- a/app/src/main/res/layout/currency_convert_fragment.xml
+++ b/app/src/main/res/layout/currency_convert_fragment.xml
@@ -9,7 +9,7 @@
 
         <variable
                 name="vm"
-                type="io.audioshinigami.currencyconverter.convertAmount.CurrencyConvertViewModel" />
+                type="io.audioshinigami.currencyconverter.sharedviewmodels.SharedCurrencyViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
