--- a/app/src/main/res/layout/currency_convert_fragment.xml
+++ b/app/src/main/res/layout/currency_convert_fragment.xml
@@ -72,6 +72,7 @@
 
             <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/edittxt_currency_from"
+                    android:imeOptions="actionDone"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="4"
