+++ to skip conversion if both from & to codes are same

--- a/app/src/main/res/navigation/navigation_graph.xml
+++ b/app/src/main/res/navigation/navigation_graph.xml
@@ -12,7 +12,8 @@
             android:label="      " >
         <action
                 android:id="@+id/action_currencyConvertFragment_to_currencySelectFragment"
-                app:destination="@id/currencySelectFragment" />
+                app:destination="@id/currencySelectFragment"
+                app:enterAnim="@anim/fragment_open_enter" />
     </fragment>
     <dialog
             android:id="@+id/currencySelectFragment"
