--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -1,8 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
 
     <!--    to support dark theme-->
     <color name="background_color">@color/md_black_1000</color>
 <!--    edit text background colour -->
     <color name="editxt_bg_color">@color/background_color</color>
+
+    <color name="text_color">@color/md_grey_300</color>
+<!--    snackbar color-->
+    <color name="design_snackbar_background_color" tools:override="true">@color/background_color</color>
 </resources>
