--- a/app/src/main/res/values-v23/styles.xml
+++ b/app/src/main/res/values-v23/styles.xml
@@ -9,6 +9,7 @@
         <item name="colorAccent">@color/colorAccent</item>
 <!--        <item name="android:windowLightStatusBar">true</item>-->
         <item name="android:background">@color/background_color</item>
+        <item name="android:textColor">@color/text_color</item>
 
     </style>
 
