--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">@color/project_green</color>
@@ -12,5 +12,7 @@
 <!--    to support dark theme-->
     <color name="background_color">@color/md_white_1000</color>
     <color name="editxt_bg_color">@color/md_green_100</color>
+    <color name="design_snackbar_background_color" tools:override="true">@color/background_color</color>
+    <color name="text_color">@color/md_black_1000</color>
 
 </resources>
