--- a/app/src/main/res/layout/currency_convert_fragment.xml
+++ b/app/src/main/res/layout/currency_convert_fragment.xml
@@ -13,9 +13,10 @@
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/convert_currency_layout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            tools:context=".activities.HomeActivity">
+            tools:context=".activities.HomeActivity" >
 
         <TextView
                 android:id="@+id/textView"
@@ -83,9 +84,7 @@
                     android:hint="@string/_0_0"
                     android:inputType="numberDecimal"
                     android:padding="@dimen/editxt_padding"
-                    android:textSize="@dimen/dimen_edittxt_size">
-
-            </com.google.android.material.textfield.TextInputEditText>
+                    android:textSize="@dimen/dimen_edittxt_size"/>
 
             <TextView
                     style="@style/currencyInputStyle"
@@ -123,9 +122,7 @@
                     android:text="@{vm.convertedAmount}"
                     android:hint="@string/_0_0"
                     android:inputType="text"
-                    android:textSize="@dimen/dimen_edittxt_size">
-
-            </com.google.android.material.textfield.TextInputEditText>
+                    android:textSize="@dimen/dimen_edittxt_size" />
 
             <TextView
                     style="@style/currencyInputStyle"
