--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,4 +15,11 @@
     <color name="design_snackbar_background_color" tools:override="true">@color/background_color</color>
     <color name="text_color">@color/md_black_1000</color>
 
+    <!--    ExchangeView colours-->
+    <color name="exchange_view_background">@android:color/white</color>
+    <color name="exchange_image_background">@android:color/white</color>
+    <color name="exchange_icon">@android:color/black</color>
+    <color name="exchange_text_colour">@android:color/white</color>
+
+
 </resources>
