--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -21,5 +21,8 @@
     <color name="exchange_icon">@android:color/black</color>
     <color name="exchange_text_colour">@android:color/white</color>
 
+<!--    Bottom nav bar-->
+    <color name="bottom_nav">@color/background_color</color>
+    <color name="bottom_icon">@color/md_grey_600</color>
 
 </resources>
