--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -5,24 +5,25 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@color/background_color"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         tools:context=".HomeActivity">
 
-<!--    <com.google.android.material.appbar.AppBarLayout-->
-<!--            android:id="@+id/appbar"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="?attr/actionBarSize"-->
-<!--            app:elevation="0dp">-->
+    <!--    <com.google.android.material.appbar.AppBarLayout-->
+    <!--            android:id="@+id/appbar"-->
+    <!--            android:layout_width="match_parent"-->
+    <!--            android:layout_height="?attr/actionBarSize"-->
+    <!--            app:elevation="0dp">-->
 
-<!--        <androidx.appcompat.widget.Toolbar-->
-<!--                android:id="@+id/toolbar"-->
-<!--                android:theme="@style/AppToolbar"-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="match_parent">-->
+    <!--        <androidx.appcompat.widget.Toolbar-->
+    <!--                android:id="@+id/toolbar"-->
+    <!--                android:theme="@style/AppToolbar"-->
+    <!--                android:layout_width="match_parent"-->
+    <!--                android:layout_height="match_parent">-->
 
-<!--        </androidx.appcompat.widget.Toolbar>-->
+    <!--        </androidx.appcompat.widget.Toolbar>-->
 
-<!--    </com.google.android.material.appbar.AppBarLayout>-->
+    <!--    </com.google.android.material.appbar.AppBarLayout>-->
 
     <fragment
             android:id="@+id/nav_host_fragment_container"
@@ -35,7 +36,7 @@
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
             app:menu="@menu/bottom_nav_menu"
-            app:itemBackground="@color/bottom_nav"
+            app:itemBackground="@android:color/transparent"
             android:layout_gravity="bottom"
             android:id="@+id/bottom_navigation"
             android:layout_width="match_parent"
