--- a/app/src/main/res/layout/currency_convert_fragment.xml
+++ b/app/src/main/res/layout/currency_convert_fragment.xml
@@ -24,7 +24,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
-                android:layout_marginTop="64dp"
+                android:layout_marginTop="@dimen/title_top_margin"
                 android:layout_marginEnd="8dp"
                 android:fontFamily="@font/montserrat_alternates"
                 android:text="@string/str_currency"
