--- a/app/src/main/res/layout/exchange_fragment.xml
+++ b/app/src/main/res/layout/exchange_fragment.xml
@@ -18,6 +18,8 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintBottom_toTopOf="@id/currency_input"
             android:layout_marginStart="16dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginTop="@dimen/title_top_margin"
             android:layout_width="0dp"
             android:layout_height="wrap_content" />
 
