--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -36,6 +36,7 @@
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
             app:menu="@menu/bottom_nav_menu"
+            android:background="@color/background_color"
             app:itemBackground="@android:color/transparent"
             android:layout_gravity="bottom"
             android:id="@+id/bottom_navigation"
