--- a/app/src/main/res/layout/exchange_view.xml
+++ b/app/src/main/res/layout/exchange_view.xml
@@ -13,8 +13,12 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toStartOf="@id/currency_name"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintDimensionRatio="1"
             app:layout_constraintHorizontal_weight="1"
+            android:layout_marginTop="16dp"
+            android:layout_marginBottom="16dp"
+            android:layout_marginStart="8dp"
             android:background="@drawable/squircle"
             android:layout_width="0dp"
             android:layout_height="0dp" />
@@ -26,7 +30,7 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="8dp"
             android:background="@android:color/transparent"
-            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintTop_toTopOf="@id/currency_icon"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/currency_icon"
             app:layout_constraintHorizontal_weight="3"
