--- a/app/src/main/res/values-v23/styles.xml
+++ b/app/src/main/res/values-v23/styles.xml
@@ -8,7 +8,7 @@
         <item name="colorPrimaryDark">@android:color/black</item>
         <item name="colorAccent">@color/colorAccent</item>
 <!--        <item name="android:windowLightStatusBar">true</item>-->
-        <item name="android:background">@color/background_color</item>
+<!--        <item name="android:background">@color/background_color</item>-->
         <item name="android:textColor">@color/text_color</item>
 
     </style>
