--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,7 +12,7 @@
 <!--    to support dark theme-->
     <color name="background_color">@color/md_white_1000</color>
     <color name="editxt_bg_color">@color/md_green_100</color>
-    <color name="design_snackbar_background_color" tools:override="true">@color/background_color</color>
+<!--    <color name="design_snackbar_background_color" tools:override="true">@color/background_color</color>-->
     <color name="text_color">@color/md_black_1000</color>
 
     <!--    ExchangeView colours-->
@@ -24,5 +24,7 @@
 <!--    Bottom nav bar-->
     <color name="bottom_nav">@color/background_color</color>
     <color name="bottom_icon">@color/md_grey_600</color>
+    <!--    Exchange Fragment-->
+    <color name="divider">@color/md_white_1000</color>
 
 </resources>
