--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,7 +6,7 @@
         <item name="colorPrimary">@android:color/white</item>
         <item name="colorPrimaryDark">@android:color/black</item>
         <item name="colorAccent">@color/colorAccent</item>
-        <item name="android:background">@color/background_color</item>
+<!--        <item name="android:background">@color/background_color</item>-->
         <item name="android:textColor">@color/text_color</item>
 
 
