--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -27,4 +27,6 @@
     <!--    Exchange Fragment-->
     <color name="divider">@color/md_white_1000</color>
 
+<!--    currency convert -->
+    <color name="button_background">#02D99A</color>
 </resources>
