--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -1,19 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto">
+<menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
+
             android:icon="@drawable/ic_money"
             android:id="@+id/currencyConvertFragment"
             android:title="@string/currencies" />
 
     <item
-            app:showAsAction="always"
             android:id="@+id/exchangeFragment"
             android:icon="@drawable/ic_exchange"
             android:title="@string/exchange_title" />
 
     <item
+            android:id="@+id/settingsFragment"
         android:title="More"
         android:icon="@drawable/ic_more"
         />
