--- a/app/src/main/res/navigation/navigation_graph.xml
+++ b/app/src/main/res/navigation/navigation_graph.xml
@@ -28,4 +28,8 @@
                 android:id="@+id/action_exchangeFragment_to_currencyConvertFragment"
                 app:destination="@id/currencyConvertFragment" />
     </fragment>
+    <fragment
+            android:id="@+id/settingsFragment"
+            android:name="io.audioshinigami.currencyconverter.settings.SettingsFragment"
+            android:label="SettingsFragment" />
 </navigation>
