--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources xmlns:tools="http://schemas.android.com/tools">
+<resources>
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">@color/project_green</color>
@@ -29,4 +29,5 @@
 
 <!--    currency convert -->
     <color name="button_background">#02D99A</color>
+    <color name="button_text">@android:color/black</color>
 </resources>
